Link hero register button to registration form

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     Part-time classes & NSSCO Examinations for Grade 10, 11 & 12.
                 </p>
                 <div class="hero-buttons">
-                    <a href="#contact" class="btn btn-primary btn-lg">Register for 2026</a>
+                    <a href="#register" class="btn btn-primary btn-lg">Register for 2026</a>
                     <a href="#programs" class="btn btn-outline btn-lg">View Programs</a>
                 </div>
                 <div class="hero-highlight">
